expect failed for can not trap screen