@@ -12,10 +12,24 @@ GIT_MAP=([credit_center]=git@git.renrenxin.com:infrastructure/credit_center/cred
 [borrower]=git@git.renrenxin.com:product/lender/borrower.git
 [bm]=git@git.renrenxin.com:product/lender/bm.git
 )
-
+#项目部署地址
+DEPLOY_MAP=([credit_center]=/home/work/app/credit_center/
+[jjd_api]=/home/work/app/jjd_api/
+[msg_center]=/home/work/app/msg_center/
+[pay_service]=/home/work/app/pay_service/
+[lender]=/home/work/app/lender/
+[borrower]=/home/work/app/borrower/
+[bm]=/home/work/app/bm/)
 #monitor brache
 MON_BRANCH="dev"
-
+#maven地址
+MAVEN_PATH="/home/work/app/maven"
+#java
+java_path="/home/work/app/jdk"
+#api接口文档目录
+html_home="/home/work/data/html/api/"
+#api doc_file
+doc_file="api.py"
 
 #创建工作目录
 function get_workspace(){
@@ -24,27 +38,19 @@ function get_workspace(){
   work_space=$HOME/$work_space
 }
 
-
-
-function get_dev_seq(){
-  cd $work_space
-  branches=(`git branch -r | grep -v '\->'|sed -r 's!^\s*origin/!!'`)
-  for ((i=0;i<${#branches[*]};i++));do
-	if [ "${branches[$i]}" = "dev" ];then
-		echo $i
-		break
-	fi
-  done
+#部署工作目录
+function get_src(){
+  get_workspace $1
+  if [ -d $work_space ];then
+    cd $work_space
+  else
+    cd $HOME
+    git clone ${GIT_MAP[$1]}
+    [ $? -ne 0 ] && exit 1
+  fi
+  git pull origin $MON_BRANCH
 }
 
-function get_project_id(){
-  for ((i=0;i<${#PROJECTS[*]};i++));do
-        if [ "${PROJECTS[$i]}" = "$1" ];then
-                echo $i
-                break
-        fi
-  done
-}
 
 function check_update(){
   cd $work_space
@@ -55,14 +61,57 @@ function check_update(){
  fi
 }
 
+function backup() {
+  [ -d ${DEPLOY_MAP[$1]} ] || mkdir -p ${DEPLOY_MAP[$1]}
+  cd  ${DEPLOY_MAP[$1]}
+  ls | grep -Eq "*\.jar$"
+  if [ $? -eq 0 ]; then 
+    tar -czf $1.bak.tar.gz  *.jar
+    cp $1.bak.tar.gz $work_space
+    rm -rf ${DEPLOY_MAP[$1]}/*
+  fi
+}
+
+function build() {
+  cd $work_space
+  git checkout $branch
+  $MAVEN_PATH/bin/mvn clean && $MAVEN_PATH/bin/mvn package -Dmaven.test.skip=true -U
+}
+
+function deploy() {
+  cd $work_space
+  find . -maxdepth 2 -path "*/target/*.jar" -exec cp -a {} ${DEPLOY_MAP[$1]}  \;
+  if [ -f $doc_file ]; then
+      [ -d $html_home ] || mkdir -p $html_home
+      python api.py 
+  fi
+}
+
+function restart() {
+  cd ${DEPLOY_MAP[$1]}
+  pids=`ps aux | grep -i $1|grep -i java | grep -v grep|awk '{print $2}'`
+  pid_count=`ps aux | grep -i $1|grep -i java | grep -v grep|wc -l`
+  if [ $pid_count -ge 1 ]; then
+    for pid in $pids; do
+      kill -9 $pid
+    done
+  fi
+  sleep 2
+  proc=`find ${DEPLOY_MAP[$1]} -name *.jar` 
+  nohup $JAVA_HOME/bin/java -Xms800m -Xmx800m -XX:PermSize=256m -XX:MaxPermSize=512m -XX:MaxNewSize=512m  -jar $proc &
+  sleep 3
+  echo "部署重启完成，等待片刻测试，如果服务未启动请查看对应项目目录下nohup.out"
+}
 
 for project in 	${PROJECTS[@]}; do
 	get_workspace $project
         update=`check_update`
 	if [ ! "$update" = "ok" ]; then
-	     dev_id=`get_dev_seq`
-	     project_id=`get_project_id $project`
-		/usr/bin/expect auto_dep.exp $project_id 1 $dev_id
+      get_src $project
+	  build $project
+	  backup $project
+	  deploy $project
+	  restart $project
 	fi
         sleep 5
 done
